service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-demo
  name: nginx-service
spec:
  ports:
    - name: '8080'
      port: 8080
      targetPort: 80
  selector:
    app: nginx-demo
status:
  loadBalancer: {}
