ingress-final.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod" # referencia a nuestro issuer (emisor) que pedirá los certificados a letsencript
spec:
  tls:
  - hosts:
    - hostnameExample.com # hotname configurado en nuestro DNS apuntando al loadbalancer de nuestro nginx controller
    secretName: customsecretname # (lower case) este nombre lo tomara automáticamente nuestro Issuer (Emisor) para generar el SECRET, asi que nuestro secret se llamara customSecretName
  rules:
  - host: hostnameExample.com # hotname configurado en nuestro DNS apuntando al loadbalancer de nuestro nginx controller
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 8080
