ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  rules:
  - host: hostnameExample.com # hotname configurado en nuestro DNS apuntando al loadbalancer de nuestro nginx controller
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 8080
